--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,6 +1,36 @@
 {% extends "global/base.html" %}
 
-{% block content %}
-    Este é o index.html
-{% endblock content %}
+{% block title %}{{ title }}{% endblock title %}
 
+{% block content %}
+
+{% if page_obj %}
+<div class="responsive-table">
+    <table class="contacts-table">         
+        <caption class="table-caption">Contacts</caption>           
+        <thead>
+            <tr class="table-row table-row-header">
+                <th class="table-header">Id</th>
+                <th class="table-header">First Name</th>
+                <th class="table-header">Last Name</th>
+                <th class="table-header">Phone</th>
+                <th class="table-header">E-mail</th>
+            </tr>          
+        </thead>          
+        <tbody>
+            {% for contact in page_obj %}
+                <tr>
+                    <td class="table-cell"><a href="{% url "contact:contact" contact.id %}">{{ contact.id }}</a></td>
+                    <td class="table-cel">{{ contact.first_name }}</td>
+                    <td class="table-cel">{{ contact.last_name}}</td>
+                    <td class="table-cel">{{ contact.phone}}</td>
+                    <td class="table-cel">{{ contact.email}}</td>
+                </tr>
+            {% endfor %}         
+        </tbody>      
+    </table>   
+</div>
+{% else %}
+    <h1 class="single-contact">Nenhum contato encontrado!</h1>
+{% endif %}
+{% endblock content %}
